// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button  button render block 1`] = `
<body>
  <div>
    <button
      class="leke-btn leke-btn-default  leke-btn-middle leke-btn-block"
    />
  </div>
</body>
`;

exports[`Button  button render danger 1`] = `
<body>
  <div>
    <button
      class="leke-btn leke-btn-danger leke-btn-default  leke-btn-middle"
    />
  </div>
</body>
`;

exports[`Button  button render disabled 1`] = `
<body>
  <div>
    <button
      class="leke-btn leke-btn-default  leke-btn-middle"
      disabled=""
    />
  </div>
</body>
`;

exports[`Button  button render ghost 1`] = `
<body>
  <div>
    <button
      class="leke-btn leke-btn-default  leke-btn-middle leke-btnBackgroundGhost"
    />
  </div>
</body>
`;

exports[`Button  button render lekeDisabled 1`] = `
<body>
  <div>
    <button
      class="leke-btn leke-btn-default  leke-btn-middle leke-btnDisabled"
      disabled=""
    />
  </div>
</body>
`;

exports[`Button  button render loading 1`] = `
<body>
  <div>
    <span>
       1111 
    </span>
  </div>
  <div>
    <button
      class="leke-btn leke-btn-default  leke-btn-middle leke-btn-loading leke-btn-icon-only"
    >
      <div
        class="leke-btn-loading-icon"
      />
    </button>
  </div>
</body>
`;

exports[`Button  button render shape 1`] = `
<body>
  <div>
    <button
      class="leke-btn leke-btn-default leke-btn-circle leke-btn-middle"
    />
  </div>
</body>
`;

exports[`Button  button render size 1`] = `
<body>
  <div>
    <button
      class="leke-btn leke-btn-default  leke-btn-large"
    />
  </div>
</body>
`;

exports[`Button  button render type 1`] = `
<body>
  <div>
    <button
      class="leke-btn leke-btn-primary  leke-btn-middle"
    />
  </div>
</body>
`;

exports[`Button  button render warning 1`] = `
<body>
  <div>
    <button
      class="leke-btn leke-btn-warning leke-btn-default  leke-btn-middle"
    />
  </div>
</body>
`;
